--- a/src/html/partials/get-gallery/get-gallery-1.html
+++ b/src/html/partials/get-gallery/get-gallery-1.html
@@ -1,12 +1,11 @@
+<p data-translate="DESC_SUBSCRIBE_STEP_1"></p>
+
 <form class="form" name="getGalleryForm1" data-ng-submit="onGetGalleryStep1Submit(getGalleryForm1.$valid)" novalidate>
-
-  <p class="push--bottom">{{'SUBSCRIBE_DESCRIPTION_STEP_1' | translate}}</p>
-
   <div class="form__fieldset">
 
     <p data-ng-show="showErrorMessage" class="form__error">Wrong username or album key!</p>
 
-    <p class="form__label">{{'SUBSCRIBE_LABEL_OWNERNAME' | translate}}</p>
+    <p class="form__label" data-translate="LABEL_USERNAME_AUTHOR"></p>
 
 
     <div class="form__text-input-outer">
@@ -21,12 +20,19 @@
       <span class="form__validation-icon form__validation-icon--error icon-attention"
             data-ng-show="showForm1Errors"></span>
     </div>
-    <span class="form__error-msg" data-ng-show="showForm1Errors && getGalleryForm1.ownerName.$error.required">A username is required!</span>
-    <span class="form__error-msg" data-ng-show="showForm1Errors && getGalleryForm1.ownerName.$error.minlength">Username is to short.</span>
-    <span class="form__error-msg" data-ng-show="showForm1Errors && galleryOwnerNameError">Invalid username!</span>
+
+    <span class="form__error-msg"
+          data-ng-show="showForm1Errors && getGalleryForm1.ownerName.$error.required">
+      A username is required!</span>
+    <span class="form__error-msg"
+          data-ng-show="showForm1Errors && getGalleryForm1.ownerName.$error.minlength">
+      Username is to short.</span>
+    <span class="form__error-msg"
+          data-ng-show="showForm1Errors && galleryOwnerNameError">
+      Invalid username!</span>
 
     <p class="text-right push--top clear">
-      <button class="btn--blue" type="submit">{{'BTN_CONTINUE' | translate}}</button>
+      <button class="btn--blue" type="submit" data-translate="ACTION_CONTINUE"></button>
     </p>
 
   </div>
