--- a/src/html/partials/settings/account/reset-pwd.html
+++ b/src/html/partials/settings/account/reset-pwd.html
@@ -1,7 +1,7 @@
-<h2>{{'TITLE_CHANGE_PASSWORD' | translate}}</h2>
+<h2 data-translate="TITLE_CHANGE_PASSWORD"></h2>
 
-<p>{{'INFO_CHANGE_PASSWORD' | translate}}</p>
-<p>{{'DESC_CHANGE_PASSWORD' | translate}}</p>
+<p data-translate="INFO_CHANGE_PASSWORD"></p>
+<p data-translate="DESC_CHANGE_PASSWORD"></p>
 
 <div data-ng-if="resetPwdStep == 1" data-ng-include="'html/partials/settings/account/reset-pwd-1.html'"></div>
 <div data-ng-if="resetPwdStep == 2" data-ng-include="'html/partials/settings/account/reset-pwd-2.html'"></div>
