--- a/src/html/partials/create-gallery/index.html
+++ b/src/html/partials/create-gallery/index.html
@@ -1,7 +1,7 @@
 <div class="top">
   <div class="top__inner">
+    <span class="top__title" data-translate="TITLE_NEW"></span>
     <span class="top__icon-back icon-back" data-ng-click="go('home', 'slide-right')"></span>
-    <h1 class="top__title">{{'TITLE_NEW' | translate}}</h1>
     <span class="top__icon-settings" data-ng-click="go('/settings', 'slide-left', true)">
     <img style="width:30px;" src="img/settings.png"/>
   </span>
@@ -11,6 +11,8 @@
 <div class="center center--show-top">
   <div class="center__inner text-center">
 
+    <h1 data-translate="TITLE_CREATE_NEW_GALLERY"></h1>
+
     <div data-ng-if="!galleriesLimitReached">
       <form class="form--centered"
             name="createGalleryForm"
@@ -18,7 +20,7 @@
             novalidate>
 
 
-        <p class="form__label">{{'LABEL_GALLERY_TITLE' | translate}}</p>
+        <p class="form__label" data-translate="LABEL_GALLERY_TITLE"></p>
       <span class="form__text-input-outer">
         <input class="form__text-input"
                type="text"
@@ -38,11 +40,12 @@
     </div>
 
     <div data-ng-if="galleriesLimitReached">
-      <h2>{{'INFO_LIMIT_REACHED' | translate}}</h2>
+      <h2 data-translate="INFO_LIMIT_REACHED"></h2>
 
-      <p>{{'INFO_GALLERIES_LIMIT' | translate}}</p>
-      <p>{{'INFO_NEED_MORE' | translate}}</p>
-      <p><a href="" data-ng-click="go('settings/upgrade/option1', 'slide-left', true)">{{'NAVI_GO_UPGRADE' | translate}}</a></p>
+      <p data-translate="INFO_GALLERIES_LIMIT"></p>
+      <p data-translate="INFO_NEED_MORE"></p>
+      <p data-ng-click="go('settings/upgrade/option1', 'slide-left', true)"
+          data-translate="NAVI_GO_UPGRADE"></p>
 
     </div>
 
