--- a/src/html/partials/get-gallery/get-gallery-2.html
+++ b/src/html/partials/get-gallery/get-gallery-2.html
@@ -1,9 +1,9 @@
 <form class="form" data-ng-submit="onGetGalleryStep2Submit()">
 
-  <p class="push--bottom">{{'SUBSCRIBE_DESCRIPTION_STEP_2' | translate}}</p>
+  <p class="push--bottom" data-translate="DESC_SUBSCRIBE_STEP_2"></p>
 
-  <p class="form__label">{{'SUBSCRIBE_LABEL_ACCESS_CODE' | translate}}
-    <span class="text-red" data-ng-if="galleryKeyError">{{'SUBSCRIBE_INVALID_ACCESS_CODE' | translate}} </span>
+  <p class="form__label" data-translate="LABEL_ACCESS_CODE">
+    <span class="text-red" data-ng-if="galleryKeyError" data-translate="LABEL_INVALID_ACCESS_CODE"></span>
   </p>
 
   <div class="text-center">
