--- a/src/html/partials/get-gallery/index.html
+++ b/src/html/partials/get-gallery/index.html
@@ -1,6 +1,6 @@
 <div class="top">
   <div class="top__inner">
-    <h1 class="top__title">{{'HOME_MENU_SUBSCRIBE_TITLE' | translate}}</h1>
+    <h1 class="top__title" data-translate="TITLE_IMPORT"></h1>
     <span class="top__icon-back icon-back" data-ng-click="go('home', 'slide-right')"></span>
     <span class="float-right" data-ng-click="go('/settings', 'slide-left')">
     <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
@@ -11,22 +11,15 @@
 <div class="center center--show-top">
   <div class="center__inner">
 
-    <div class="grid">
-      <div class="grid__item two-thirds">
-        <h1>{{'SUBSCRIBE_TITLE' | translate}}</h1>
+    <div class="center__box">
 
-        <div data-ng-if="getGalleryStep == 1" data-ng-include="'html/partials/get-gallery/get-gallery-1.html'"></div>
-        <div data-ng-if="getGalleryStep == 2" data-ng-include="'html/partials/get-gallery/get-gallery-2.html'"></div>
-      </div>
-      <div class="grid__item one-third">
-        <h2>{{'LOGIN_TITLE' | translate}}</h2>
+      <h1 data-translate="TITLE_IMPORT_GALLERY"></h1>
 
-        <p>{{'LOGIN_INFO' | translate}}</p>
-        <a href="" data-ng-click="go('/login', 'slide-left')">{{'LOGIN_GO_TO' | translate}}</a>
-      </div>
-
+      <div data-ng-if="getGalleryStep == 1" data-ng-include="'html/partials/get-gallery/get-gallery-1.html'"></div>
+      <div data-ng-if="getGalleryStep == 2" data-ng-include="'html/partials/get-gallery/get-gallery-2.html'"></div>
     </div>
 
-
   </div>
+
+</div>
 </div>
