--- a/src/html/partials/home/index.html
+++ b/src/html/partials/home/index.html
@@ -5,21 +5,21 @@
     <div class="grid__item one-whole lap-and-up-one-third home-menu__item home-menu__item--create"
          data-ng-click="go('/create-gallery', 'slide-left')">
       <div class="home-menu__item-inner">
-        <span class="home-menu__item-title">{{ 'TITLE_NEW' | translate }}</span>
+        <span class="home-menu__item-title" data-translate="TITLE_NEW"></span>
         <span class="home-menu__item-icon icon-add"></span>
       </div>
     </div>
     <div class="grid__item one-whole lap-and-up-one-third home-menu__item home-menu__item--import"
          data-ng-click="go('/get-gallery', 'slide-left')">
       <div class="home-menu__item-inner">
-        <span class="home-menu__item-title">{{ 'TITLE_IMPORT' | translate }}</span>
+        <span class="home-menu__item-title" data-translate="TITLE_IMPORT"></span>
         <span class="home-menu__item-icon icon-download"></span>
       </div>
     </div>
     <div class="grid__item one-whole lap-and-up-one-third home-menu__item home-menu__item--select"
          data-ng-click="go('/select-gallery', 'slide-left')">
       <div class="home-menu__item-inner">
-        <span class="home-menu__item-title">{{ 'TITLE_SHOW_GALLERIES' | translate }}</span>
+        <span class="home-menu__item-title" data-translate="TITLE_SHOW_GALLERIES"></span>
         <span class="home-menu__item-icon icon-select"></span>
       </div>
     </div>
