--- a/src/html/partials/settings/upgrade/option1.html
+++ b/src/html/partials/settings/upgrade/option1.html
@@ -24,27 +24,25 @@
 <p data-ng-if="appSettings.maxGalleries > 1">Thank you for your upgrade!</p>
 <br/>
 
-<h3>{{'LABEL_FEATURE_UPGRADE' | translate}}</h3>
-<p>{{'DESC_UPGRADE_ALLOW_FOREIGN_UPLOADS' | translate}}</p>
+<h3 data-translate="LABEL_FEATURE_UPGRADE"></h3>
+<p data-translate="DESC_UPGRADE_ALLOW_FOREIGN_UPLOADS"></p>
 <table>
   <tr>
-    <th class="text-left">{{'LABEL_DETAILS' | translate}}</th>
-    <th class="text-center">{{'LABEL_FROM' | translate}}</th>
-    <th class="text-center">{{'LABEL_TO' | translate}}</th>
+    <th class="text-left" data-translate="LABEL_DETAILS"></th>
+    <th class="text-center" data-translate="LABEL_FROM"></th>
+    <th class="text-center" data-translate="LABEL_TO"></th>
   </tr>
   <tr>
     <td>Feature: Gemeinsames bearbeiten</td>
     <td class="text-center">
-      <span data-ng-if="appSettings.allowForeignUploads == false">{{'LABEL_OFF' | translate}}</span>
-      <span data-ng-if="appSettings.allowForeignUploads == true">{{'LABEL_ON' | translate}}</span>
+      <span data-ng-if="appSettings.allowForeignUploads == false" data-translate="LABEL_OFF"></span>
+      <span data-ng-if="appSettings.allowForeignUploads == true" data-translate="LABEL_ON"></span>
     </td>
-    <td class="text-center">{{'LABEL_ON' | translate}}</td>
+    <td class="text-center" data-translate="LABEL_ON"></td>
   </tr>
 </table>
 
 <p data-ng-if="appSettings.allowForeignUploads == false">
   <button class="btn--blue" data-ng-click="onUpgrade2BtnClick()">Buy upgrade for 1.00 €</button>
 </p>
-<p data-ng-if="appSettings.allowForeignUploads == true">
-  {{'SUCCESS_THANKS_FOR_UPGRADE' | translate}}
-</p>
+<p data-ng-if="appSettings.allowForeignUploads == true" data-translate="SUCCESS_THANKS_FOR_UPGRADE"></p>
