--- a/src/html/partials/create-gallery/index.html
+++ b/src/html/partials/create-gallery/index.html
@@ -2,7 +2,7 @@
   <div class="top__inner">
     <span class="top__title" data-translate="TITLE_NEW"></span>
     <span class="top__icon-back icon-back" data-ng-click="go('home', 'slide-right')"></span>
-    <span class="top__icon-settings" data-ng-click="go('/settings', 'slide-left', true)">
+    <span class="top__icon-settings" data-ng-click="go('/settings', 'slide-left')">
     <img style="width:30px;" src="img/settings.png"/>
   </span>
   </div>
