--- a/src/html/partials/settings/upgrade/option1.html
+++ b/src/html/partials/settings/upgrade/option1.html
@@ -1,3 +1,5 @@
+<p data-translate="INFO_UPGRADE_INTRO"></p>
+
 <h2>{{'LABEL_UPGRADE_LIMITS' | translate}}</h2>
 <p>{{'INFO_NEED_MORE' | translate}}</p>
 <table>
