--- a/src/html/partials/signin/index.html
+++ b/src/html/partials/signin/index.html
@@ -1,7 +1,7 @@
 <div class="top">
   <div class="top__inner">
-    <h1 class="top__title">{{'TITLE_SIGNIN' | translate}}</h1>
-    <span class="top__icon-back icon-back" data-ng-click="back()"></span>
+    <h1 class="top__title" data-translate="TITLE_SIGNIN"></h1>
+    <span class="top__icon-back icon-back" data-ng-click="back(true)"></span>
     <span class="top__icon-settings" data-ng-click="go('/settings', 'slide-left', true)">
     <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
@@ -13,20 +13,24 @@
 
     <form class="form--centered" name="signinForm" data-ng-submit="signinSubmit(signinForm.$valid)" novalidate>
 
+      <h1 data-translate="TITLE_SIGNIN"></h1>
 
-      <p>{{'INFO_SIGNIN' | translate}}</p>
+      <p data-translate="INFO_SIGNIN"></p>
 
-      <p>{{'SIGNIN_QUESTION' | translate}} <span class="link" data-ng-click="go('login', 'slide-left')">{{'NAVI_GO_LOGIN' | translate}}</span></p>
+      <p class="push--bottom">
+        <span data-translate="INFO_SIGNIN_ALREADY"></span>
+        <span class="link" data-ng-click="go('login', 'slide-left')" data-translate="NAVI_GO_LOGIN"></span>
+      </p>
 
       <div class="form__group">
-        <span class="form__label">{{'LABEL_PIC_USERNAME' | translate}}</span>
+        <span class="form__label" data-translate="LABEL_PIC_USERNAME"></span>
 
         <div class="form__ctrl">
           <span class="form__text-input-outer">
             <input
                 name="username"
                 data-ng-model="signinCredentials.username"
-                data-ng-minlength="8"
+                data-ng-minlength="6"
                 data-ng-maxlength="30"
                 data-ng-change="onUsernameChange()"
                 class="form__text-input"
@@ -39,17 +43,25 @@
         <span class="form__validation-icon icon-check"
               data-ng-show="signinForm.username.$valid && !signinForm.username.$error.taken && signinForm.username.$blurred"></span>
         <span class="form__error-msg"
-              data-ng-show="(showSigninFormErrors || signinForm.username.$blurred) && signinForm.username.$error.required">A username is required!</span>
+              data-ng-show="(showSigninFormErrors || signinForm.username.$blurred) && signinForm.username.$error.required"
+              data-translate="ERROR_USERNAME_REQUIRED">
+          </span>
         <span class="form__error-msg"
-              data-ng-show="(showSigninFormErrors || signinForm.username.$blurred) && signinForm.username.$error.minlength">Username is to short.</span>
+              data-ng-show="(showSigninFormErrors || signinForm.username.$blurred) && signinForm.username.$error.minlength"
+              data-translate="ERROR_USERNAME_TOO_SHORT">
+          </span>
         <span class="form__error-msg"
-              data-ng-show="(showSigninFormErrors || signinForm.username.$blurred) && signinForm.username.$error.maxlength">Username is to long.</span>
+              data-ng-show="(showSigninFormErrors || signinForm.username.$blurred) && signinForm.username.$error.maxlength"
+              data-translate="ERROR_USERNAME_TOO_LONG">
+          </span>
         <span class="form__error-msg"
-              data-ng-show="(showSigninFormErrors || signinForm.username.$blurred) && signinForm.username.$error.taken">Username is not available.</span>
+              data-ng-show="(showSigninFormErrors || signinForm.username.$blurred) && signinForm.username.$error.taken"
+              data-translate="ERROR_USERNAME_NOT_AVAILABLE">
+          </span>
       </div>
 
       <div class="form__group">
-        <span class="form__label">{{'LABEL_EMAIL' | translate}}</span>
+        <span class="form__label" data-translate="LABEL_EMAIL"></span>
 
         <div class="form__ctrl">
           <span class="form__text-input-outer">
@@ -70,14 +82,16 @@
 
 
         <span class="form__error-msg"
-              data-ng-show="(showSigninFormErrors || signinForm.email.$blurred) && signinForm.email.$error.required">Your email is required!</span>
+              data-ng-show="(showSigninFormErrors || signinForm.email.$blurred) && signinForm.email.$error.required"
+            data-translate="ERROR_EMAIL_REQUIRED"></span>
         <span class="form__error-msg"
-              data-ng-show="(showSigninFormErrors || signinForm.email.$blurred) && signinForm.email.$error.pattern">Not a valid email format!</span>
+              data-ng-show="(showSigninFormErrors || signinForm.email.$blurred) && signinForm.email.$error.pattern"
+            data-translate="ERROR_EMAIL_INVALID_FORMAT"></span>
 
       </div>
 
       <div class="form__group">
-        <span class="form__label">{{'LABEL_PASSWORD' | translate}}</span>
+        <span class="form__label" data-translate="LABEL_PIC_PASSWORD"></span>
 
         <div class="form__ctrl">
           <span class="form__text-input-outer">
@@ -92,11 +106,12 @@
         </div>
 
         <span class="form__error-msg"
-              data-ng-show="(showSigninFormErrors || signinForm.password.$blurred) && signinForm.password.$error.required">A password is required!</span>
+              data-ng-show="(showSigninFormErrors || signinForm.password.$blurred) && signinForm.password.$error.required"
+            data-translate="ERROR_PASSWORD_REQUIRED">A password is required!</span>
       </div>
 
       <div class="form__ctrl text-right">
-        <button class="btn--blue" type="submit">{{'ACTION_CONTINUE' | translate}}</button>
+        <button class="btn--blue" type="submit" data-translate="ACTION_CONTINUE"></button>
       </div>
     </form>
   </div>
